--- a/public/index.html
+++ b/public/index.html
@@ -908,7 +908,7 @@
                         <article about="#" class="blog is-promoted keys-1">
                             <div class="keys1-wrapper">
                                 <div class="keys1-picture">
-                                    <img src="img/image 7.3.png" height="480px">
+                                    <img src="img/image/image 7.3.png" height="480px">
                                 </div>
                                 <div class="keys1-container">
                                     <div class="keys1-header">
