--- a/public/index.html
+++ b/public/index.html
@@ -840,7 +840,7 @@
                         <article about="#" class="blog is-promoted keys-1">
                             <div class="keys1-wrapper">
                                 <div class="keys1-picture">
-                                    <img src="img/image 11.1.png" width="360px" height="215px">
+                                    <img src="img/image/image 11.1.png" width="360px" height="215px">
                                 </div>
                                 <div class="keys1-container">
                                     <div class="keys1-header">
@@ -884,7 +884,7 @@
                         <article about="#" class="blog is-promoted keys-1">
                             <div class="keys1-wrapper">
                                 <div class="keys1-picture">
-                                    <img src="img/image 8.3.png" height="480px">
+                                    <img src="img/image/image8.3.png" height="480px">
                                 </div>
                                 <div class="keys1-container">
                                     <div class="keys1-header">
@@ -908,7 +908,7 @@
                         <article about="#" class="blog is-promoted keys-1">
                             <div class="keys1-wrapper">
                                 <div class="keys1-picture">
-                                    <img src="img/image/image 7.3.png" height="480px">
+                                    <img src="img/image/image7.3.png" height="480px">
                                 </div>
                                 <div class="keys1-container">
                                     <div class="keys1-header">
