--- a/public/index.html
+++ b/public/index.html
@@ -931,7 +931,7 @@
                         <article about="#" class="blog is-promoted keys-1">
                             <div class="keys1-wrapper">
                                 <div class="keys1-picture">
-                                    <img src="img/image 11.1.png" height="250px">
+                                    <img src="img/image/image 11.1.png" height="250px">
                                 </div>
                                 <div class="keys1-container">
                                     <div class="keys1-header">
