--- a/public/index.html
+++ b/public/index.html
@@ -863,7 +863,7 @@
                         <article about="#" class="blog is-promoted keys-2">
                             <div class="keys2-wrapper">
                                 <div class="keys2-picture">
-                                    <img src="img/laptop.jpg" width="800px">
+                                    <img src="img/image/image 6.2" width="800px">
                                 </div>
                                 <div class="keys2-container">
                                     <div class="keys2-header">
@@ -884,7 +884,7 @@
                         <article about="#" class="blog is-promoted keys-1">
                             <div class="keys1-wrapper">
                                 <div class="keys1-picture">
-                                    <img src="img/image/image8.3.png" height="480px">
+                                    <img src="img/image/image 8.3.png" height="480px">
                                 </div>
                                 <div class="keys1-container">
                                     <div class="keys1-header">
@@ -908,7 +908,7 @@
                         <article about="#" class="blog is-promoted keys-1">
                             <div class="keys1-wrapper">
                                 <div class="keys1-picture">
-                                    <img src="img/image/image7.3.png" height="480px">
+                                    <img src="img/image/image 7.3.png" height="480px">
                                 </div>
                                 <div class="keys1-container">
                                     <div class="keys1-header">
