--- a/public/index.html
+++ b/public/index.html
@@ -863,7 +863,7 @@
                         <article about="#" class="blog is-promoted keys-2">
                             <div class="keys2-wrapper">
                                 <div class="keys2-picture">
-                                    <img src="img/image/image 6.2" width="800px">
+                                    <img src="img/image/image 6.2.png" width="800px">
                                 </div>
                                 <div class="keys2-container">
                                     <div class="keys2-header">
